US-1699 fixed the subnav controls to stretch all the way...

--- a/cmn/MVP.css
+++ b/cmn/MVP.css
@@ -823,7 +823,7 @@ li.selectedtab, li.selectedtab > a, li.selectedtab > a:hover {
 .subnav-controls {
     height: 60px;
     white-space: nowrap;
-    margin: 0 40px 20px 40px;
+    margin: 0 0 20px 0;
     background-color: #F1F1F1;
     text-align: center;
 }
@@ -834,9 +834,9 @@ li.selectedtab, li.selectedtab > a, li.selectedtab > a:hover {
     display: inline-block;
     vertical-align: middle;
     white-space: normal;
-    width: -moz-calc(100% - 40px);
-    width: -webkit-calc(100% - 40px);
-    width: calc(100% - 40px);
+    width: -moz-calc(100% - 80px);
+    width: -webkit-calc(100% - 80px);
+    width: calc(100% - 80px);
 }
 .subnav-controls > div > div {
     position: relative;
